package(
    default_visibility = [
        "//visibility:public",
    ],
    features = ["-layering_check"],
)

cc_library(
    name = "Tools",
    srcs = [],
    hdrs = [],
    copts = ["-I./src"],
    linkopts = [
        "-pthread",
        "-ldl",
    ],
    deps = [
        "//src/logger",
        "//src/logger:Logging",
        "//src/Base64:base64",
        "//src/BmpTool",
        "//src/C_VECTOR:c_vector",
        "//src/CGI",
        "//src/ConfigTool",
        "//src/fastjson",
        "//src/JSON:CJsonObject",
        "//src/json11",
        "//src/littlefs",
        # "//src/kHttpd:kHttpd",
        "//src/nlohmann:nlohmann_json",
        "//src/Pipe",
        "//src/easyloggingpp",
        "//src/SHA1",
        "//src/date",
        # "//src/socket:socket",
        "//src/thread_pool",
        "//src/xml:tinyxml2",
        "//src/UTF8Url",
        # "//src/http:http",
        "//src/net_tool",
        "//src/yaml-cpp",
    ],
)
