cc_binary(
    name = "logger_demo",
    srcs = ["logger_demo.cpp"],
    copts = [
        "-Isrc",
        "-Isrc/logger",
        "-Isrc/thread_pool",
    ],
    deps = [
        "//:Tools",
    ],
)

cc_binary(
    name = "testDate",
    srcs = ["testDate.cpp"],
    copts = [
    ],
    deps = [
        "//:Tools",
    ],
)
