cc_library(
    name = "Pipe",
    srcs = [
        "Pipe.cpp"
        ],
    hdrs = [
        "Pipe.h"
        ],
    visibility = ["//visibility:public"],
    copts = ["-Isrc/logger","-Isrc/socket",],
    deps = [
            "//src/logger:logger",
            "//src/socket:socket",
            ]
)


