cc_library(
    name = "easyloggingpp",
    srcs = ["easylogging++.cc"],
    hdrs = ["easylogging++.h"],
    copts = ["-std=c++11"],
    includes = ["."],
    linkopts = ["-std=c++11"],
    linkstatic = True,
    local_defines = [
        "ELPP_FORCE_USE_STD_THREAD",
        "ELPP_NO_DEFAULT_LOG_FILE",
        "ELPP_AS_DLL",
        "AUTO_INITIALIZE_EASYLOGGINGPP",
        "ELPP_THREAD_SAFE",
    ],
    visibility = ["//visibility:public"],
)
