cc_library(
    name = "thread_pool",
    linkstatic = True,
    hdrs = ["thread_pool.hpp"],
    includes = ["."],
    copts = select({
        "@platforms//os:windows": ["/utf-8","/DWIN32","-D_Tools_HEADER_"],
        "@platforms//os:linux": ["-std=c++11","-fPIC"],
        "//conditions:default": ["-std=c++11"],
    }),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "thread_pool-test",
    srcs = ["test/test-thread_pool.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":thread_pool",
    ],
    copts = ["-std=c++11",],
)

