cc_library(
    name = "thread_pool",
    linkstatic = True,
    hdrs = ["thread_pool.hpp"],
    includes = ["."],
    copts = ["-std=c++11","-fPIC"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "thread_pool-test",
    srcs = ["test/test-thread_pool.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":thread_pool",
    ],
    copts = ["-std=c++11",],
)

