cc_library(
    name = "thread_pool",
    srcs = [
        "threadpool.cpp",
    ],
    hdrs = [
        "ThreadPool.hpp",
        "thread_pool.hpp",
        "threadpool.h",
    ],
    copts = [
        "-std=c++11",
        "-fPIC",
    ],
    includes = ["."],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "thread_pool-test",
    srcs = ["test/test-thread_pool.cpp"],
    copts = ["-std=c++11"],
    deps = [
        ":thread_pool",
        "@com_google_googletest//:gtest_main",
    ],
)
